--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ coverage.out
 coverage.html
 coverage/
 coverage_*.out
+final_coverage.out
+
+# Test output files
+test_output.txt
 
 # Dependency directories
 vendor/
