--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,8 @@
 # golangci-lint configuration
 # https://golangci-lint.run/usage/configuration/
 
+config-version: "2.0"
+
 run:
   timeout: 5m
   tests: true
